fix word wrap

--- a/src/components/discounts/style.css
+++ b/src/components/discounts/style.css
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: column;
   align-items: left;
-  justify-content: center;
+  justify-content: space-between;
   background-color: #fff;
   margin: 10px;
   padding: 10px;
@@ -67,9 +67,22 @@
 }
 .discount_card_product_img img {
   width: auto;
-  object-fit: cover;
+  object-fit: contain;
   height: 200px;
   border-radius: 10px;
+}
+.discount_card_product_name {
+  max-width: 100%;
+  /* position: absolute; */
+  width: 100%;
+}
+.discount_card_product_name h3 {
+  /* position: relative; */
+  max-width: 100%;
+  white-space: wrap;
+  word-wrap: break-word;
+  overflow: hidden;
+  max-height: 50px;
 }
 .discount_card_product_details .discount_card_product_price {
   display: flex;
@@ -128,7 +141,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .discount_card{
+  .discount_card {
     padding: 0px 0px;
   }
   .discount_card_product {
